--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -23,17 +23,19 @@
         top: 0;
         left: 0;
         transform: scale(1.2);
+        z-index: -10;
       }
     }
 
     &-p2 {
       left: 0;
       top: 1rem;
+      z-index: 100;
 
      
       @include respond(tab-port) {
         top: 0;
-        z-index: 100;
+        z-index: -10;
         transform: scale(1.4);
       }
     }
@@ -47,6 +49,7 @@
         top: 0;
         left: 0;
         transform: scale(1.2);
+        z-index: -10;
       }
     }
 
