--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -38,6 +38,7 @@
     position: absolute;
     top: 4rem;
     left: 4rem;
+    z-index: -10;
   }
 
   &__logo {
